<resources>
    <string name="app_name" translatable="false">Which Face Is Real</string>

    <string name="image_1_description" translatable="false">image 1</string>
    <string name="image_2_description" translatable="false">image 2</string>
    <string name="tv_1">Which person is real?</string>
    <string name="tv_2">One of these faces is real, but another - generated by a neural network. Try to guess which is the real one.</string>
    <string name="error_file_read">Can\'t read info from file</string>
    <string name="next">Next</string>
    <string name="right">Right!</string>
    <string name="wrong">Wrong!</string>
    <string name="guessing_percentage">Guessing rate: %1$d</string>
    <string name="this_session">This session</string>
    <string name="total">Total</string>
    <string name="tv_right">Right: %1$d</string>
    <string name="tv_wrong">Wrong: %1$d</string>
    <string name="error_loading_image">Error loading images!</string>
    <string name="info">Info</string>
    <string name="description">One of images is generated by neural network, but another is a real photo. Can you guess which is the real one? App requires internet connection to work. Images are taken from http://www.whichfaceisreal.com/. Many thanks to the developers of this site.</string>
    <string name="press_again_to_exit">Press once again to exit!</string>
</resources>
